--- a/index.html
+++ b/index.html
@@ -10,51 +10,52 @@
 </head>
 
 <body class="is-size-7">
-
     <div class="section">
         <div class="container is-max-desktop">
-            <header>
-                <nav class="breadcrumb is-size-7">
-                    <ul>
-                        <li>
-                            <span class="icon-text">
-                                <span class="icon mr-0">
-                                    <i class="fas fa-envelope"></i>
+            <section class="section">
+                <header>
+                    <nav class="breadcrumb is-size-7">
+                        <ul>
+                            <li>
+                                <span class="icon-text">
+                                    <span class="icon mr-0">
+                                        <i class="fas fa-envelope"></i>
+                                    </span>
+                                    <span>
+                                        <a class="" href="mailto:youremail@email.com">youremail@email.com</a>
+                                    </span>
                                 </span>
-                                <span>
-                                    <a class="" href="mailto:youremail@email.com">youremail@email.com</a>
+                            </li>
+                            <li>
+                                <span class="icon-text">
+                                    <span class="icon ml-1 mr-0">
+                                        <i class="fas fa-phone"></i>
+                                    </span>
+                                    <span class="mr-2">555-555-5555</span>
                                 </span>
-                            </span>
-                        </li>
-                        <li>
-                            <span class="icon-text">
-                                <span class="icon ml-1 mr-0">
-                                    <i class="fas fa-phone"></i>
+                            </li>
+                            <li>
+                                <span class="icon-text">
+                                    <span class="icon mr-0">
+                                        <i class="fab fa-chrome"></i>
+                                    </span>
+                                    <span>
+                                        <a class="p-0" href="https://yourwebsite.dev">yourwebsite.dev</a>
+                                    </span>
                                 </span>
-                                <span class="mr-2">555-555-5555</span>
-                            </span>
-                        </li>
-                        <li class="is-hidden-mobile">
-                            <span class="icon-text">
-                                <span class="icon mr-0">
-                                    <i class="fab fa-chrome"></i>
-                                </span>
-                                <span>
-                                    <a class="p-0" href="https://yourwebsite.dev">yourwebsite.dev</a>
-                                </span>
-                            </span>
-                        </li>
-                    </ul>
-                </nav>
-                <div class="columns is-vcentered">
-                    <div class="column is-two-thirds ml-2">
-                        <h1 class="has-text-info-dark is-size-1-tablet is-size-2-mobile has-text-weight-light">
-                            YOUR <span class="has-text-weight-bold">NAME</span>
-                        </h1>
-                        <h2 class="has-text-grey-light is-size-4">TITLE (i.e. SOFTWARE ENGINEER)</h2>
+                            </li>
+                        </ul>
+                    </nav>
+                    <div class="columns is-vcentered">
+                        <div class="column is-two-thirds ml-2">
+                            <h1 class="has-text-info-dark is-size-1-tablet is-size-2-mobile has-text-weight-light">
+                                YOUR <span class="has-text-weight-bold">NAME</span>
+                            </h1>
+                            <h2 class="has-text-grey-light is-size-4">TITLE (i.e. SOFTWARE ENGINEER)</h2>
+                        </div>
                     </div>
-                </div>
-            </header>
+                </header>
+            </section>
             <section>
                 <hr class="mb-2">
                 <div class="level mb-0 is-mobile is-size-6">
@@ -100,7 +101,7 @@
                 </div>
                 <hr class="mt-2">
             </section>
-            <section id="aboutMe">
+            <section id="aboutMe" class="section">
                 <div class="columns is-vcentered is-mobile">
                     <div class="column is-narrow is-hidden-mobile">
                         <figure class="image is-128x128">
@@ -126,7 +127,7 @@
                     </div>
                 </div>
             </section>
-            <section class="mt-4">
+            <section class="section">
                 <div class="columns">
                     <div class="column is-one-third">
                         <section id="technicalSkills">
