Update column spacing and add IDs to elements

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             </section>
             <section id="aboutMe" class="section">
                 <div class="columns is-vcentered is-mobile">
-                    <div class="column is-narrow is-hidden-mobile">
+                    <div id="photo" class="column is-narrow is-hidden-mobile">
                         <figure class="image is-128x128">
                             <!-- Replace "octocat" with your GitHub username to automaticaly pull in your github avatar -->
                             <img class=" is-rounded" src="https://github.com/octocat.png" alt="your name avatar">
@@ -135,10 +135,10 @@
                             <hr class="mt-2 mb-2">
                             <div class="columns is-vcentered is-mobile">
                                 <div class="column is-narrow">
-                                    <p class="m-0">JavaScript</p>
-                                    <p class="m-0">Node</p>
-                                    <p class="m-0">Python</p>
-                                    <p class="m-0">.NET</p>
+                                    <p class="m-2">JavaScript</p>
+                                    <p class="m-2">Node</p>
+                                    <p class="m-2">Python</p>
+                                    <p class="m-2">.NET</p>
                                 </div>
                                 <div class="column">
                                     <p class="m-2">
